back connected to front and fix message overflow. next step: separating rooms

--- a/frontend/src/styles/Message.module.css
+++ b/frontend/src/styles/Message.module.css
@@ -1,10 +1,45 @@
 .message {
     position: relative;
+    overflow-y: scroll; 
+    width: auto; 
     display: flex;
     width: 100%;
     margin: 5px 0;
   }
 
+  .messageTop
+  {
+    font-size:14px;
+    font-weight: 600;
+    position: relative;
+    top: 0;
+    left: 0;
+    text-align: left;
+    color: rgb(255, 253, 253);
+  }
+  
+
+  .messageText
+  {
+    font-size:17px;
+    font-weight: 30;
+    top: 0;
+    left: 0;
+    text-align: left;
+    color: rgb(255, 253, 253);
+    word-wrap: break-word;/* This will break long words to fit in the box */
+   
+  }
+  .messageBottom
+  {
+    font-size:12px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+    color: rgb(255, 253, 253);
+  }
+  
   .messageImg{
     width: 32px;
     height: 32px;
@@ -14,18 +49,10 @@
   }
   
 
-  .messageBottom
-  {
-    font-size:12px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    text-align: right;
-    color: rgb(255, 253, 253);
-   
-   
-  }
+
   
+
+
   
   .my-message {
     float: right; 
